CAMEL-22269: camel-jbang: Test infra should delete files when stopping. Polished code.