@@ -22,7 +22,6 @@ import java.nio.file.Path;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.apache.camel.dsl.jbang.core.commands.CamelJBangMain;
 import org.apache.camel.dsl.jbang.core.common.CommandLineHelper;
@@ -43,7 +42,7 @@ public class InfraPs extends InfraBaseCommand {
         try {
             List<Path> pidFiles = Files.list(CommandLineHelper.getCamelDir())
                     .filter(p -> p.getFileName().toString().startsWith("infra-"))
-                    .collect(java.util.stream.Collectors.toList());
+                    .toList();
 
             for (Path pidFile : pidFiles) {
                 String runningServiceName = pidFile.getFileName().toString().split("-")[1];
